# privateDepDemo

./: CHANGELOG.md  README.md  flake.nix  mk-hackage.nix  privateDepDemo.cabal
app/: Main.hs
