cabal-version:      3.0
name:               privateDepDemo
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Seungheon Oh
maintainer:         seungheon.ooh@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable privateDepDemo
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , privateDepDemoLib
    hs-source-dirs:   app
    default-language: Haskell2010
